--- a/CaosNews/webcaosnews/templates/login.html
+++ b/CaosNews/webcaosnews/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -6,23 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Caos News</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gcom" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -41,10 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'indx' %}">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../web/contacto.html">Contacto</a>
+                        <a class="nav-link" href="{% url 'cont' %}">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -52,10 +50,10 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="nacional.html">Nacional</a></li>
-                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
-                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
-                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nac' %}">Nacional</a></li>
+                            <li><a class="dropdown-item" href="{% url 'mun' %}">Mundo</a></li>
+                            <li><a class="dropdown-item" href="{% url 'dep' %}">Deportes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'pol' %}">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,7 +61,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar
+                        <a class="nav-link" id="iniciarSesion" href="{% url 'log' %}"><i class="icon-user"></i> Iniciar
                             Sesión</a>
                     </li>
                     <form class="d-flex">
@@ -73,7 +71,6 @@
                 </ul>
             </div>
     </nav>
-
     <!-- Formulario -->
     <div class="container-fluid ps-md-0">
         <div class="row g-0">
@@ -88,7 +85,7 @@
                                 <form>
                                     <div class="form-floating mb-3">
                                         <input type="email" class="form-control" id="floatingInput"
-                                            placeholder="name@example.com">
+                                            placeholder="name@ejemplo.com">
                                         <label for="floatingInput">Email</label>
                                     </div>
                                     <div class="form-floating mb-3">
@@ -113,11 +110,9 @@
                                         </div>
                                         <div class="text-center">
                                             <p class="small" style="padding-top: 10px;">¿No eres un miembro? <a
-                                                    href="signup.html">Regístrate</a></p>
+                                                    href="{% url 'sp' %}">Regístrate</a></p>
                                         </div>
-
                                     </div>
-
                                 </form>
                             </div>
                         </div>
@@ -126,15 +121,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
     <!-- Footer -->
     <footer class="text-center text-lg-start text-dark bg-danger">
         <!--Social media -->
@@ -241,7 +227,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
