--- a/CaosNews/webcaosnews/templates/escribir.html
+++ b/CaosNews/webcaosnews/templates/escribir.html
@@ -19,10 +19,11 @@ Formulario de Publicación de Noticias - Caos News
 {% block contenido %}
 <!-- Contenido -->
 <div class="container border border-bottom-0">
-    <form action="{% url 'escr' %}" name="formulario" id="formulario" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
+    <form action="{% url 'escr' %}" name="formulario" id="formulario" method="post" enctype="multipart/form-data"
+        class="needs-validation" novalidate>
         {% csrf_token %}
         <div class="top p-4">
-            <h1 class="text-center  titulo-web shadow ">Escritura de Artículo</h1>
+            <h1 class="text-center titulo-web shadow">Escritura de Artículo</h1>
         </div>
         <!-- Formulario -->
         <div class="form-group">
@@ -33,14 +34,15 @@ Formulario de Publicación de Noticias - Caos News
             <div class="mb-3">
                 <label for="formFile" class="form-label">Imagen de Portada</label>
                 <!--Para aceptar todo tipo de imagenes: accept="image/*"-->
-                <input class="form-control" name="txtImagen" type="file" accept="image/png, image/jpeg, image/jpg"  id="txtImagen" required>
+                <input class="form-control" name="txtImagen" type="file" accept="image/png, image/jpeg, image/jpg"
+                    id="txtImagen" required>
             </div>
             <!-- Selectores -->
             <div class="col-sm-6 col-md-5 col-lg-2" style="margin-bottom: 20px;">
                 <select class="form-select" name="cboCategoria" required aria-label="select example" id="categoria">
                     <option value="">Categoría</option>
                     {% for reg in items %}
-                        <option value="{{reg.nombre}}">{{reg.nombre}}</option>
+                    <option value="{{reg.nombre}}">{{reg.nombre}}</option>
                     {% endfor %}
                 </select>
                 <div class="invalid-feedback">Escoge una categoría</div>
@@ -73,6 +75,45 @@ Formulario de Publicación de Noticias - Caos News
         </div>
     </form>
 </div>
+
+<div class="modals">
+    <div class="modal mConfirmacion fade " id="mConfirmacion" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">¿Está seguro de continuar?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Luego de enviar el artículo, no podrá editarlo.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-danger" data-bs-target="#mFinal" data-bs-toggle="modal" data-bs-dismiss="modal">Estoy seguro</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal mFinal fade" id="mFinal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">¡Enviado!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Tu artículo sera revisado por nuestros administradores. Te avisaremos cuando llegue el resultado.
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
     $("#submit").click(function () {
         var editorContent = tinyMCE.get('tinyeditor').getContent();
@@ -84,68 +125,33 @@ Formulario de Publicación de Noticias - Caos News
                 confirmButtonText: 'Aceptar'
             })
             tinyMCE.activeEditor.focus();
-            return false;  
+            return false;
         }
         else {
             // Example starter JavaScript for disabling form submissions if there are invalid fields
-            (() => {
+            (function () {
                 'use strict'
 
                 // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                const forms = document.querySelectorAll('.needs-validation')
+                var forms = document.querySelectorAll('.needs-validation')
 
                 // Loop over them and prevent submission
-                Array.from(forms).forEach(form => {
-                    form.addEventListener('submit', event => {
-                        if (!form.checkValidity()) {
+                Array.prototype.slice.call(forms)
+                    .forEach(function (form) {
+                        form.addEventListener('submit', function (event) {
+                            if (!form.checkValidity()) {
+                                event.preventDefault()
+                                event.stopPropagation()
+                            }
+                            $("#mConfirmacion").modal("show");
+
                             event.preventDefault()
-                            event.stopPropagation()
-
-
-                            
-
-                        }
-                        console.log('ok log');
-                        
-
-                        if (form.checkValidity()) {
-                            //event.preventDefault()
-                            event.stopPropagation()
-
-                            //alert("Formulario enviado")
-                            Swal.fire({
-                                title: '¿Está seguro de continuar?',
-                                text: "Luego de enviar el artículo, no podrá editarlo.",
-                                icon: 'warning',
-                                showCancelButton: true,
-                                confirmButtonColor: '#3085d6',
-                                cancelButtonColor: '##DC3545',
-                                confirmButtonText: 'Estoy seguro'
-                            }).then((result) => {
-                                if (result.isConfirmed) {
-                                    Swal.fire(
-                                        '¡Enviado!',
-                                        'Tu artículo sera revisado por nuestros administradores. Te avisaremos cuando llegue el resultado',
-                                        'success'
-                                    ).then(function () {
-                                        
-                                      
-                                        
-                                    })
-
-                                }
-                            })
-                            //form.classList.add('was-validated')
-                        }
-                    }, false)
-                }
-                
-                )
-
+                            form.classList.add('was-validated')
+                        }, false)
+                    })
             })()
-
         }
-       
+
     })
 </script>
 {% endblock contenido %}
